# amarekin-tg-bot

./: .gitignore  CHANGELOG.md  README.md  changelog.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/api/v1/endpoints/: ai.py  users.py
backend/core/: config.py  log_settings.py
backend/db/: database.py
backend/db/dao/: base.py  user.py
backend/di/: __init__.py  ai.py  user_dao.py
backend/migration/: env.py
backend/migration/versions/: 2fd4a4813d0b_init_migration.py  8e9983754df9_downgrade_user.py  de9629352bd9_init_migration.py
backend/models/: user.py
backend/schemas/: message.py  user.py
backend/services/: ai_service.py
bot/: config.py  log_settings.py  main.py
bot/di/: __init__.py  ai_service.py  auth.py  logger_di.py
bot/dialogs/: __init__.py  start.py  user_text.py
bot/schemas/: message.py  user.py
bot/services/: ai_service.py  users.py
bot/utils/: ai.py  users.py
tests/: test_backend.py
