[project]
name = "amarekin-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "fastapi[all]>=0.115.12",
    "greenlet>=3.2.3",
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.21",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
]
